potential fix: add cargo fetch before cargo update --precise

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Pin transitive dependencies
         run: |
+          cargo fetch
           cargo update home --precise 0.5.9
           cargo update getrandom@0.2 --precise 0.2.15
 
