--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -132,5 +132,5 @@ jobs:
           api-key: ${{ secrets.ZAD_API_KEY }}
           project-id: regel-k4c
           deployment-name: upload
-          component: web
+          component: upload
           image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
