fix ZAD deploy: use SHA image tag from build output
- Fix component name to 'upload' (available in regel-k4c project)
- Pass exact SHA image tag from build job to deploy job via outputs
- Ensures deploy always references the image that was actually pushed

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -70,6 +70,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+    outputs:
+      image-tag: ${{ steps.sha-tag.outputs.image }}
 
     steps:
       - name: Checkout repository
@@ -100,6 +102,10 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=sha
+
+      - name: Determine SHA image tag
+        id: sha-tag
+        run: echo "image=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${GITHUB_SHA::7}" >> "$GITHUB_OUTPUT"
 
       - name: Build and push container image
         uses: docker/build-push-action@v5
@@ -133,4 +139,4 @@ jobs:
           project-id: regel-k4c
           deployment-name: upload
           component: upload
-          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
+          image: ${{ needs.build.outputs.image-tag }}
