--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dotenvy = "0.15"
 hex = "0.4"
+zip = { version = "0.6", default-features = false, features = ["deflate"] }
 
 # Input validation
 validator = { version = "0.16", features = ["derive"] }
