--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "EUPL-1.2"
 axum = { version = "0.7", features = ["multipart", "macros"] }
 tokio = { version = "1.36", features = ["full"] }
 tower = "0.4"
-tower-http = { version = "0.5", features = ["cors", "fs", "limit", "trace"] }
+tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
 
 # Database
 sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
