--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -139,6 +139,6 @@ jobs:
         with:
           api-key: ${{ secrets.ZAD_API_KEY }}
           project-id: regel-k4c
-          deployment-name: upload
+          deployment-name: regelrecht
           component: upload
           image: ${{ needs.build.outputs.image-tag }}
